--- a/src/css/About.css
+++ b/src/css/About.css
@@ -35,17 +35,21 @@
   color: #666;
 }
 
-.About__education {
+.About__educationContainer {
   width: 900px;
-  height: 500px;
+  height: 550px;
   background-color: #eaeaea85;
-  /* border: 1px solid #707070; */
   border-radius: 15px;
   margin-top: 10em;
 }
 
-.About__education h4 {
+.About__educationContainer h4 {
   text-align: center;
   font-size: 1.5em;
-  margin-top: 1em;
+  margin-top: 2em;
+}
+
+.educations {
+ margin: 4em;
+  
 }
