--- a/src/css/Education.css
+++ b/src/css/Education.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin: 2em 0;
+  margin: 3em 0;
 }
 
 .Education__icon {
@@ -20,7 +20,7 @@
 .school {
   font-size: 0.9em;
   color: #868686;
-  line-height: 2em;
+  line-height: 1.6;
 }
 
 .school {
@@ -31,5 +31,5 @@
   font-size: 1.1em;
   font-weight: bold;
   color: #666;
-  line-height: 2em;
+  line-height: 1.6;
 }
