--- a/src/css/App.css
+++ b/src/css/App.css
@@ -7,3 +7,10 @@
   font-family: 'Noto Sans', sans-serif;
 }
 
+.cv {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
