--- a/src/css/App.css
+++ b/src/css/App.css
@@ -7,7 +7,7 @@
   font-family: 'Noto Sans', sans-serif;
 }
 
-.cv {
+.center {
   display: flex;
   flex-direction: column;
   justify-content: center;
