--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 8em;
+  margin: 8em;
   text-align: center;
 }
 
@@ -13,6 +13,6 @@
 }
 
 .Contact_subtitle {
-  margin-bottom: 4em;
-  /* padding: 0 35em; */
+  margin-bottom: 6em;
+
 }
