--- a/src/css/About.css
+++ b/src/css/About.css
@@ -1,34 +1,32 @@
-.About {
-  /* display: grid;
-  place-items: center; */
-}
+
 
 .About__container {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  /* justify-content: center; */
   width: 900px;
   margin-top: 8em;
 }
 
 .About__container img {
-  width: 20em;
+  width: 21em;
 }
 
 .About__text {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  margin-left: 7em;
+ 
+  margin-left:  4em;
 }
 
 .About__text h3 {
-  font-size: 1.5em;
+  font-size: 1.7em;
+  padding: 0 6em 0 0;
 }
 
 .About__text p {
   color: #666;
   line-height: 1.7;
+  margin: 1em 0;
+  font-size: 1em;
 }
 
 .About__educationContainer {
