--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 8em;
+  margin: 12em 0 7em 0;
   text-align: center;
 }
 
@@ -14,5 +14,5 @@
 
 .Contact_subtitle {
   margin-bottom: 6em;
-
+  color: #666;
 }
