--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -3,16 +3,18 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 12em 0 7em 0;
+  margin: 12em 0 0 0;
   text-align: center;
+
 }
 
 .Contact__title {
   font-size: 3em;
   margin-bottom: 0.3em;
+  margin-top: 1em;
 }
 
 .Contact_subtitle {
-  margin-bottom: 6em;
+  margin-bottom: 5em;
   color: #666;
 }
