--- a/src/css/ContactInfo.css
+++ b/src/css/ContactInfo.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   text-align: initial;
-  margin-bottom: 3em;
+  margin-bottom: 4em;
 }
 
 .contact_icon {
@@ -12,7 +12,11 @@
 }
 
 .contact_info {
-  margin: 0 2em;
+  margin-left: 3em;
   flex: 1;
+  line-height: 2;
 }
 
+.contact_info h4 {
+  font-size: 1.3em;
+}
