--- a/src/css/About.css
+++ b/src/css/About.css
@@ -3,7 +3,6 @@
 .About__container {
   display: flex;
   flex-direction: row;
-  /* justify-content: center; */
   width: 900px;
   margin-top: 8em;
 }
@@ -29,7 +28,7 @@
   font-size: 1em;
 }
 
-.About__educationContainer {
+/* .About__educationContainer {
   width: 900px;
   height: 550px;
   background-color: #eaeaea85;
@@ -41,7 +40,7 @@
   text-align: center;
   font-size: 1.5em;
   margin-top: 2em;
-}
+} */
 
 .resume_button {
   background-color: #403535 !important;
@@ -49,6 +48,6 @@
   padding: 1em 2em !important;
 }
 
-.educations {
+/* .educations {
   margin: 3em 5em;
-}
+} */
