--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 12em 0 0 0;
+  margin-top: 8em;
   text-align: center;
 
 }
