--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,5 +1,8 @@
+@import "./responsive.css";
+
 .Home {
-  min-height: 100vh;
+  width: 100%;
+  height: 100vh;
   background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
     url("https://images.unsplash.com/photo-1499571883643-44e68963973d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2560&q=80")
       center;
@@ -17,5 +20,3 @@
   top: 35%;
   left: 22%;
 }
-
-
