--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,3 +1,5 @@
+@import "./responsive.css";
+
 .Nav {
   position: fixed;
   top: 0;
@@ -37,5 +39,5 @@
 }
 
 .active {
-  color: #fea82f !important;
+  color: #ffc288 !important;
 }
