--- a/src/css/Showcase.css
+++ b/src/css/Showcase.css
@@ -1,12 +1,16 @@
-img {
-  width: 650px;
+@import "./responsive.css";
+
+.Showcase__div img {
+  /* width: 650px; */
+  width: 70%;
 }
 .Showcase {
-  margin-top: 2em;
+  margin: 4em;
 }
 .Showcase__div {
   display: grid;
   place-items: center;
-  width: 900px;
-  height: 500px;
+
+  width: 100%;
+  height: 440px;
 }
