--- a/src/css/Educations.css
+++ b/src/css/Educations.css
@@ -19,6 +19,6 @@
 .educations {
   background-color: #eaeaea85;
   border-radius: 15px;
-  margin: 3em 0;
+  margin-top: 3em;
   padding: 2em 10em;
 }
