--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -65,9 +65,8 @@
   .Contact__title {
     font-size: 2em !important;
   }
-
-  /* Navbar */
 }
+
 
 /* Small Screen */
 @media all and (max-width: 550px) {
@@ -118,11 +117,21 @@
   }
   .Education__text {
     margin-left: 0em !important;
-  }
+ }
 
   /* Projects */
   .Showcase__div {
     height: 300px !important;
+  }
+
+  /* Nav bar */
+  .Nav__items {
+   justify-items: flex-end !important;
+  
+}
+  .Nav__items a {
+    font-size: 0.7em !important;
+   
   }
 }
 
@@ -139,6 +148,11 @@
   .MuiSvgIcon-root {
     width: 8px !important;
     height: 8px !important;
+  }
+
+  /* Nav bar */
+  .Nav{
+    visibility: hidden;
   }
 }
 
