--- a/src/css/Educations.css
+++ b/src/css/Educations.css
@@ -2,8 +2,8 @@
 
 .Educations {
   margin-top: 10em;
-  padding: 0 2em;
-  width: 100%;
+  /* padding: 0 2em; */
+  width: 100% ;
 }
 
 .Educations h1 {
@@ -21,4 +21,6 @@
   border-radius: 15px;
   margin-top: 3em;
   padding: 2em 10em;
+  /* width: 70%; */
+
 }
