--- a/src/css/Showcase.css
+++ b/src/css/Showcase.css
@@ -1,7 +1,7 @@
 @import "./responsive.css";
 
 .Showcase__div img {
-  width: 50%;
+  width: 900px;
 }
 .Showcase {
   margin: 4em;
@@ -10,5 +10,5 @@
   display: grid;
   place-items: center;
   width: 100%;
-  height: 600px;
+
 }
