--- a/src/css/About.css
+++ b/src/css/About.css
@@ -3,7 +3,7 @@
 .About__container {
   width: 100%;
   margin: 8em 2em 0 2em;
-  padding: 0 15em;
+  /* padding: 0 15em; */
   text-align: left;
 }
 
