--- a/src/css/Educations.css
+++ b/src/css/Educations.css
@@ -1,7 +1,7 @@
 @import "./responsive.css";
 
 .Educations {
-  margin-top: 10em;
+  margin-top: 8em;
   width: 100% ;
 }
 
@@ -20,6 +20,6 @@
   border-radius: 15px;
   margin-top: 3em;
   padding: 2em 10em;
-  /* width: 70%; */
+  width: 100%;
 
 }
