--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -3,7 +3,7 @@
 .Projects {
   margin-top: 8em;
   text-align: center;
-  padding: 0 10em;
+  /* padding: 0 10em; */
 }
 
 .Projects__title h1 {
@@ -18,6 +18,7 @@
 
 .Projects__cakes {
   margin-bottom: 2em;
+  width: 100%;
 }
 
 .Projects__websites {
