--- a/src/css/websiteCard.css
+++ b/src/css/websiteCard.css
@@ -1,17 +1,33 @@
 .websiteCard {
-    height: 250px;
-    /* width: 270px; */
-    border-radius: 5px;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  height: 250px;
+  border-radius: 5px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: white;
 }
 
-.websiteCard a {
-    text-decoration: none;
-    color: white;
+.websiteCard:hover > div {
+  visibility: visible;
+}
+
+.cardContent {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 194, 136, 0);
+  transition: background-color 0.3s;
+  visibility: hidden;
+  border-radius: 5px;
+}
+
+.cardContent:hover {
+  background-color: rgba(255, 194, 136, 0.9);
+}
+
+.cardContent a {
+  text-decoration: none;
+  color: white;
 }
