--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -3,7 +3,6 @@
 .Projects {
   margin-top: 8em;
   text-align: center;
-  /* padding: 0 10em; */
 }
 
 .Projects__title h1 {
@@ -16,8 +15,13 @@
   margin-bottom: 1em;
 }
 
+.Projects__title2 p {
+  color: #666;
+  margin-bottom: 4em;
+}
+
 .Projects__cakes {
-  margin-bottom: 2em;
+  margin-bottom: 6em;
   width: 100%;
 }
 
