--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,4 +1,8 @@
 @import "./responsive.css";
+/* @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&display=swap');
+
+
 
 .Home {
   width: 100%;
@@ -19,4 +23,11 @@
   position: absolute;
   top: 35%;
   left: 22%;
+}
+
+.typedStrings {
+/* font-family: 'Lato', sans-serif; */
+font-family: 'Annie Use Your Telescope', cursive;
+  text-transform: uppercase;
+  font-size: 1.3em;
 }
