--- a/src/css/Educations.css
+++ b/src/css/Educations.css
@@ -5,15 +5,14 @@
   width: 100% ;
 }
 
-.Educations h1 {
-  text-align: center;
+/* .Educations h1 {
   font-size: 3em;
   margin-bottom: 0.3em;
-}
+} */
 
-.Educations p {
+/* .Educations p {
   color: #666;
-}
+} */
 
 .educations {
   background-color: #eaeaea85;
