--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -11,10 +11,9 @@
 .Contact__title {
   font-size: 3em;
   margin-bottom: 0.3em;
-  margin-top: 1em;
+  /* margin-top: 1em; */
 }
 
 .Contact_subtitle {
   margin-bottom: 5em;
-  color: #666;
 }
