--- a/src/css/Skill.css
+++ b/src/css/Skill.css
@@ -1,8 +1,6 @@
-.Skill {
-    
-}
+@import "./responsive.css";
 
 .Skill p {
-    font-size: 1.2em;
-    font-weight: bold;
+  font-size: 1.2em;
+  font-weight: bold;
 }
