--- a/src/css/Skills.css
+++ b/src/css/Skills.css
@@ -1,8 +1,8 @@
+@import "./responsive.css";
+
 .Skills {
   margin-top: 8em;
   width: 100% ;
-
-
 }
 
 .Skills p {
@@ -15,7 +15,7 @@
 
 .skills_container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, 200px);
+  grid-template-columns: repeat(auto-fit, 300px);
   justify-content: space-between;
 
 }
